@@ -1,3 +1,9 @@
+2002-09-22  Don Porter  <dgp@users.sourceforge.net>
+
+	* library/tcltest/tcltest.tcl:  Corrected [puts -nonewline] within
+	test bodies.  Thanks to Harald Kirsch.  [Bug 612786, Patch 612788]
+	* library/tcltest/pkgIndex.tcl: Bump to version 2.2.1.
+
 2002-09-15  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* unix/configure: Regen.
